--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
    
     <!--CSS-->
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     
 
      <!--font-->
