--- a/sections/proyectos.html
+++ b/sections/proyectos.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!------- favicon ------->
-    <link rel="shortcut icon" href="./media/icon.png">
+    <link rel="shortcut icon" href="../img/inspire-icon-02.png">
 
 
 </head>
@@ -77,100 +77,100 @@
        
       <div class="col-md-4 portfolio-item">
         
-        <a href="../img/proyecto-01.jpg">
-          <img class="img-responsive" src="../img/proyecto-01.jpg" alt="Identidad visual">
+        <a href="../proyectos/identidadvisual.html">
+          <img class="img-responsive" src="../img/proyecto-01-v1.png" alt="Identidad visual">
         </a>       
       </div>
 
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-02.jpg">
-          <img class="img-responsive" src="../img/proyecto-02.jpg" alt="Identidad corporativa">
+        <a href="../proyectos/identidadcorporativa.html">
+          <img class="img-responsive" src="../img/proyecto-02-v1.png" alt="Identidad corporativa">
         </a>        
       </div>
 
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-03.jpg">
-          <img class="img-responsive" src="../img/proyecto-03.jpg" alt="Diseño de vidriera">
+        <a href="../proyectos/disenovidriera.html">
+          <img class="img-responsive" src="../img/proyecto-03-v1.png" alt="Diseño de vidriera">
         </a>        
       </div>   
     </div>
   
     <div class="row" id="galeria-2">
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-04.jpg">
-          <img class="img-responsive" src="../img/proyecto-04.jpg" alt="Diseño de tarjeta personal">
+        <a href="../proyectos/disenotarjetapersonal.html">
+          <img class="img-responsive" src="../img/proyecto-04-v1.jpg" alt="Diseño de tarjeta personal">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-05.jpg">
-          <img class="img-responsive" src="../img/proyecto-05.jpg" alt="Diseño de branding">
+        <a href="../proyectos/disenobranding.html">
+          <img class="img-responsive" src="../img/proyecto-05-v2.png" alt="Diseño de branding">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-06.jpg">
-          <img class="img-responsive" src="../img/proyecto-06.jpg" alt="Branding para empresa">
+        <a href="../proyectos/brandingempresa.html">
+          <img class="img-responsive" src="../img/proyecto-06-v2.png" alt="Branding para empresa">
         </a>        
       </div> 
     </div>
 
     <div class="row" id="galeria-3">
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-07.jpg">
-          <img class="img-responsive" src="../img/proyecto-07.jpg" alt="Diseño de logotipo">
+        <a href="../proyectos/logotipo.html">
+          <img class="img-responsive" src="../img/proyecto-07-v2.png" alt="Diseño de logotipo">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-08.jpg">
-          <img class="img-responsive" src="../img/proyecto-08.jpg" alt="Diseño de identidad visual">
+        <a href="../proyectos/identidadvisualslogan.html">
+          <img class="img-responsive" src="../img/proyecto-08-v2.png" alt="Diseño de identidad visual Slogan">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-09.jpg">
-          <img class="img-responsive" src="../img/proyecto-09.jpg" alt="Identidad corporativa">
+        <a href="../proyectos/identidadcorporativacurly.html">
+          <img class="img-responsive" src="../img/proyecto-09-v2.png" alt="Identidad corporativa Curly">
         </a>        
       </div> 
     </div>
 
     <div class="row" id="galeria-4">
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-10.jpg">
-          <img class="img-responsive" src="../img/proyecto-10.jpg" alt="Identidad corporativa">
+        <a href="../proyectos/identidadcorporativaho.html">
+          <img class="img-responsive" src="../img/proyecto-10-v1.jpg" alt="Identidad corporativa HO">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-11.jpg">
-          <img class="img-responsive" src="../img/proyecto-11.jpg" alt="Packaging">
+        <a href="../proyectos/packaging.html">
+          <img class="img-responsive" src="../img/proyecto-11-v1.jpg" alt="Packaging">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-12.jpg">
-          <img class="img-responsive" src="../img/proyecto-12.jpg" alt="Identidad corporativa">
+        <a href="../proyectos/identidadcorporativamosaic.html">
+          <img class="img-responsive" src="../img/proyecto-12-v1.jpg" alt="Identidad corporativa Mosaic">
         </a>        
       </div> 
     </div>
 
     <div class="row" id="galeria-5">
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-13.jpg">
-          <img class="img-responsive" src="../img/proyecto-13.jpg" alt="Diseño de logotipo para Construction">
+        <a href="../proyectos/logotipoconstruction.html">
+          <img class="img-responsive" src="../img/proyecto-13-v1.jpg" alt="Diseño de logotipo para Construction">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-14.jpg">
-          <img class="img-responsive" src="../img/proyecto-14.jpg" alt="Diseño de packaging de Nature">
+        <a href="../proyectos/packagingnature.html">
+          <img class="img-responsive" src="../img/proyecto-14-v1.jpg" alt="Diseño de packaging de Nature">
         </a>        
       </div>
   
       <div class="col-md-4 portfolio-item">
-        <a href="../img/proyecto-15.jpg">
-          <img class="img-responsive" src="../img/proyecto-15.jpg" alt="Packaging de respostería para Blue">
+        <a href="../proyectos/packagingblue.html">
+          <img class="img-responsive" src="../img/proyecto-15-v1.png" alt="Packaging de respostería para Blue">
         </a>        
       </div> 
     </div>
