--- a/sections/servicios.html
+++ b/sections/servicios.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!------- favicon ------->
-    <link rel="shortcut icon" href="./media/icon.png">
+    <link rel="shortcut icon" href="../img/inspire-icon-02.png">
     
 </head>
 <body>
@@ -92,6 +92,8 @@
          <li>Envases</li>
          <li>Etiquetas</li>
          <li>Stickers</li>
+         <li>Cajas</li>
+         <li>Bolsas ecologicas</li>
        </ul>
      </div>
 
@@ -103,8 +105,6 @@
          <li>Revistas</li>
          <li>Catálogos</li>
          <li>Libros</li>
-         <li>Afiches</li>
-         <li>Avisos publicitarios</li>
        </ul>
      </div>
    </div>
@@ -121,16 +121,16 @@
      <div class="col">
        <h2>Diseño UX/UI</h2>
        <ul>
-         <li>Lorem ipsum dolor</li>
-         <li>Lorem ipsum dolor</li>
+         <li>Experiencia de usuario (UX)</li>
+         <li>Interfaz de usuario (UI)</li>
        </ul>
      </div>
 
      <div class="col">
        <h2>Impresiones</h2>
        <ul>
-         <li>Lorem ipsum dolor</li>
-         <li>Lorem ipsum dolor</li>
+         <li>Papelería comercial</li>
+         <li>Etiquetas personalizadas</li>
        </ul>
      </div>
    </div>
