--- a/sections/acercademi.html
+++ b/sections/acercademi.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
      <!------- favicon ------->
-     <link rel="shortcut icon" href="./media/icon.png">
+     <link rel="shortcut icon" href="../img/inspire-icon-02.png">
 
 </head>
 <body>
@@ -83,8 +83,8 @@
     
     <div class="col text-start" id="card-text">
       <p>
-        ¡Hola! Soy  <b>Berenice Midon </b>, tengo 24 años. <b> Soy Licenciada en Diseño gráfico y Diseñadora UX/UI</b>. Y como no me puedo quedar quieta me estoy formando como desarrolladora web
-        Actualmente me enfoco en diseño UX/UI, principalmente en el branding de marcas,diseño de páginas web y landing. Mis objetivos son seguir creciendo y aprendiendo. Estoy abierta al desarrollo de nuevos proyectos y desafíos.
+        ¡Hola! Soy  <b>Berenice Midon </b>, tengo 24 años. <b> Soy Licenciada en Diseño gráfico y Diseñadora UX/UI</b>. Y como mi curiosidad no tiene límites, también estoy ampliando mis horizontes en el mundo del desarrollo web.
+        Actualmente me enfoco en diseño UX/UI, principalmente en el branding de marcas,diseño de páginas web y landing. En cuanto a mis metas personales, mi principal enfoque sigue siendo el crecimiento continuo y la búsqueda constante de aprendizaje.
       </p>
     </div>
   </div>
@@ -114,7 +114,7 @@
           <li>Capacidad para trabajar en equipo</li>
           <li>Branding</li>
           <li>Creatividad</li>
-          <li>Gestión del tiempo</li>
+          <li>Experiencia de usuarios</li>
         </ul>
       <h2 class="text-formacion">Herramientas</h2>
         <ul>
