--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -22,7 +22,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!------- favicon ------->
-    <link rel="shortcut icon" href="./media/icon.png">
+    <link rel="shortcut icon" href="../img/inspire-icon-02.png">
 
 </head>
 <body>
